terraform/internet_gateway.tf
##########################################################
# Internet Gateway
##########################################################

resource "aws_internet_gateway" "igw" {

  vpc_id = aws_vpc.main.id

  tags = {

    Name = "${local.project_name}-igw"

  }

}
