terraform/route_table.tf
##########################################################
# Public Route Table
##########################################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = {

    Name = "${local.project_name}-public-route-table"

  }

}

##########################################################
# Associate Public Subnet
##########################################################

resource "aws_route_table_association" "public" {

  subnet_id = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}
