terraform/security_groups.tf
##########################################################
# Jenkins Security Group
##########################################################

resource "aws_security_group" "jenkins" {

  name        = "jenkins-sg"
  description = "Security Group for Jenkins Server"
  vpc_id      = aws_vpc.main.id

  ########################################################
  # SSH
  ########################################################

  ingress {

    description = "SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # Jenkins
  ########################################################

  ingress {

    description = "Jenkins"

    from_port = 8080
    to_port   = 8080

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # HTTP
  ########################################################

  ingress {

    description = "HTTP"

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # HTTPS
  ########################################################

  ingress {

    description = "HTTPS"

    from_port = 443
    to_port   = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # Outbound
  ########################################################

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${local.project_name}-jenkins-sg"

  }

}

##########################################################
# Web Server Security Group
##########################################################

resource "aws_security_group" "web" {

  name        = "web-sg"
  description = "Security Group for Web Server"
  vpc_id      = aws_vpc.main.id

  ########################################################
  # SSH
  ########################################################

  ingress {

    description = "SSH"

    from_port = 22
    to_port   = 22

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # HTTP
  ########################################################

  ingress {

    description = "HTTP"

    from_port = 80
    to_port   = 80

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # HTTPS
  ########################################################

  ingress {

    description = "HTTPS"

    from_port = 443
    to_port   = 443

    protocol = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }

  ########################################################
  # Outbound
  ########################################################

  egress {

    from_port = 0
    to_port   = 0

    protocol = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }

  tags = {

    Name = "${local.project_name}-web-sg"

  }

}
